Implement command shuffle items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SampleRecyclerViewMultipleSelection</string>
-    <string name="action_settings">Settings</string>
+    <string name="shuffle">Shuffle</string>
 </resources>
